# medspacy_io

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  dev-requirements.txt  ehost_writer.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_pytests.yml  manual_test.yml  pythonpackage.yml  pythonpublish.yml
consumer/: demo_consumer.py  doc_consumer.py
dev_notebooks/: 00-example-ehost-writer-draft.ipynb  Decorator.ipynb  EhostReader_demo.ipynb  EhostReader_overlap.ipynb  EhostReader_overlap_cornerCase.ipynb  EhostReader_overlap_decorator.ipynb  EhostReader_overlap_decorator_newVersion.ipynb  EhostReader_overlap_decorator_oldVersionWarning.ipynb  Untitled.ipynb  Untitled1.ipynb
medspacy/: version.py
medspacy/consumer/: demo_consumer.py
medspacy/reader/: __init__.py  ehost_reader.py
medspacy/writer/: ehost_writer.py
medspacy_io/: version.py
medspacy_io/consumer/: demo_consumer.py  doc_consumer.py
medspacy_io/reader/: __init__.py  base_reader.py  brat_reader.py  ehost_reader.py
medspacy_io/vectorizer/: Vectorizer.py  __init__.py
medspacy_io/writer/: __init__.py  ehost_writer.py
tests/: Untitled.ipynb  base_reader.py  ehost_reader.py  test_brat_reader.py  test_ehost_reader.py  test_ehost_reader_overlap_span.py  test_split_annotations.py  test_vectorizer.py  unittest_test_Vectorizor.ipynb  unittest_test_eHostReader_notebook.ipynb  unittest_test_notebook.ipynb
tests/data/brat_test_corpus/: 000-introduction.ann
tests/data/ehost_split_anno/saved/: doc2.txt.knowtator.xml
tests/data/ehost_test_corpus/config/: projectschema.xml
tests/data/ehost_test_corpus/saved/: doc1.txt.knowtator.xml  doc2.txt.knowtator.xml
tests/data/ehost_test_corpus2/config/: projectschema.xml
tests/data/ehost_test_corpus2/corpus/: doc1.txt  doc2.txt
tests/data/ehost_test_corpus2/saved/: doc1.txt.knowtator.xml  doc2.txt.knowtator.xml
tests/data/ehost_test_corpus3_overlap/config/: projectschema.xml
tests/data/ehost_test_corpus3_overlap/saved/: 18305.txt.knowtator.xml
tests/data/ehost_test_corpus4/config/: projectschema.xml
tests/data/ehost_test_corpus4/saved/: 18305.txt.knowtator.xml
travis/: build-wheels.sh
